implementing Pie & Bar charts in dashboard module
