# src/app/services/models.ts
@@ -6,6 +6,8 @@ export type { AuthenticationRequest } from './models/authentication-request';
 export type { AuthenticationResponse } from './models/authentication-response';
 export type { BudgetChartDataDto } from './models/budget-chart-data-dto';
 export type { BudgetPlanDto } from './models/budget-plan-dto';
+export type { CategorySummaryDto } from './models/category-summary-dto';
+export type { DashboardResponseDto } from './models/dashboard-response-dto';
 export type { PageResponseBudgetPlanDto } from './models/page-response-budget-plan-dto';
 export type { PageResponseTransactionDto } from './models/page-response-transaction-dto';
 export type { RegistrationRequest } from './models/registration-request';
