# src/app/services/models/category-summary-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface CategorySummaryDto {
+  category?: 'RENT_MORTGAGE' | 'UTILITIES' | 'GROCERIES' | 'TRANSPORT' | 'INSURANCE' | 'HEALTH' | 'DINING_OUT' | 'ENTERTAINMENT' | 'SHOPPING' | 'TRAVEL' | 'SAVINGS' | 'INVESTMENTS' | 'DEBT' | 'GIFTS' | 'OTHER';
+  total?: number;
+}
