# src/app/services/models/dashboard-response-dto.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { CategorySummaryDto } from '../models/category-summary-dto';
+export interface DashboardResponseDto {
+  expensesByCategory?: Array<CategorySummaryDto>;
+  totalExpenses?: number;
+  totalIncome?: number;
+}
